[gd_scene load_steps=2 format=3 uid="uid://d2hbtaulje8em"]

[ext_resource type="Script" path="res://hud.gd" id="1_edgxy"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_edgxy")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Score:"

[node name="ScoreValue" type="Label" parent="."]
offset_left = 48.0
offset_right = 88.0
offset_bottom = 26.0
text = "9999"

[node name="GameTitle" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -13.0
offset_right = 58.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 90
text = "Turrim Caelum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 84
text = "Game Over"

[node name="PressAnyKey" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "(Press any key to start game)"
